2002-11-15  Jon K Hellan  <hellan@acm.org>

	* src/io-context-gtk.c (icg_init_gui): Make it dialog-like. More
	like a splash screen, but still possible to move it out of the way.

	(gnumeric_io_context_gtk_new): Declare void.

2002-11-15  Jon K Hellan  <hellan@acm.org>

	* src/io-context-gtk.c: Include libgnumeric.h
	(icg_init_gui): Declare static void.

	* src/Makefile.am (GNUMERIC_BASE): Add io-context-gtk.[ch]

2002-11-15  Jon K Hellan  <hellan@acm.org>

	* src/main-application.c (warn_about_ancient_gnumerics): Take an
	IOContext instead of a WorkbookControl.
	(main): Create an initial IOContextGtk if started with GUI, a
	CommandContextStderr otherwise. Call plugins_init earlier, but
	don't create wbcg before reading initial files. Read initial files
	with wb_view_new_from_file, and wrap them in a wbcg if successful.

	* src/io-context-gtk.[ch]: Add. IO Context with GUI for showing
	progress and messages before first wbcg is shown.
	
	* src/io-context.[ch] (gnumeric_io_warning_occurred): Add.

	* src/io-context.c (io_context_init): Initialize warning_occurred,
	error_info renamed to info.
	(ioc_finalize, gnumeric_io_error_unknown): impl is now optional.
	(gnumeric_io_error_info_set, gnumeric_io_error_push): error_info
	renamed to info.
	(gnumeric_io_error_display, io_progress_update,
	io_progress_message): Display it ourselves if no impl.
	(gnumeric_io_error_clear): Clear warning_occurred, error_info
	renamed to info.
	(gnm_io_warning): Implement.
	
	* src/io-context-priv.h (struct _IOContext): Rename error_info to
	info, add warning_occurred field.

	* src/gui-util.[ch] (gnumeric_error_info_dialog_new): New
	function. Contains the meat of gnumeric_error_info_dialog_show,
	but doesn't show it or set the parent. Display an error or warning
	dialog depending on the severity of the error_info.

	* src/gui-util.c (gnumeric_error_info_dialog_show): Factor out
	gnumeric_error_info_dialog_new.

	* src/error-info.c (error_info_new_str, error_info_new_printf):