@@ -1,3 +1,11 @@
+2002-11-16  Jon K Hellan  <hellan@acm.org>
+
+	http://bugzilla.gnome.org/show_bug.cgi?id=98661
+	* src/file.c (gnum_file_opener_open): Set filename. Fixes
+
+	* src/plugin-service.c (gnum_plugin_file_opener_open): No longer
+	set filename.
+
 2002-11-15  Jon K Hellan  <hellan@acm.org>
 
 	* src/io-context-gtk.c (icg_init_gui): Make it dialog-like. More
